--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
