--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,15 +1,17 @@
+
 {
   "compilerOptions": {
-    "target": "ES2020",                        // ✅ Required for async/await and modern features
+    "target": "ES2020",                        
     "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"],                         // ✅ Required for Node.js globals
-    "moduleResolution": "node",                // ✅ Helps resolve imports like @google/genai
-    "resolveJsonModule": true,                 // ✅ Helpful for configs in .json files
-    "outDir": "./dist"                         // ✅ Keeps compiled code separate from source
+    "types": ["node"],             
+    "moduleResolution": "node",                
+    "resolveJsonModule": true,           
+    "outDir": "./dist"                         
   },
-  "include": ["server//*"]                   // ✅ Ensure your server folder is included
+  "include": ["./**/*"],                 
+  "exclude": ["dist"]                        
 }
